adjuste in buildspec.yml cause of DockerHub error 8

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - echo "Shakese231546&" | docker login --username "jorgekamezawa" --password-stdin
+      - echo "Shakese231546&" | docker login --username "jorgekamezawa" --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
 #      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - chmod +x gradlew
   build:
